Initial cache load/store research